tests/invalid/dict_magic_reversed_wrong_arg_count/main.py
def run_case() -> None:
    d: dict[int, int] = {1: 10}
    d.__reversed__(1)


if __name__ == "__main__":
    run_case()
